feat: adds handsontable table

--- a/less/site.less
+++ b/less/site.less
@@ -1,7 +1,7 @@
-// import this directly 
+// import this directly
 //@import (inline) "target/cljsjs/handsontable/development/handsontable.full.min.css";
 
 body {
-    color:red;
+    color: darkblue;
     margin: 2em;
 }
