--- a/less/site.less
+++ b/less/site.less
@@ -1,4 +1,19 @@
 
 body {
   margin: 2em;
+  color: #000000;
+  background-color: #EEEEEE;
+}
+
+.resource-row {
+  &:hover {
+    background-color: #f6fffe;
+    color: #d5008f;
+    transition: background-color .15s ease-in;
+  }
+  border-bottom: dashed #707578 0.5px;
+}
+
+.b-navy {
+  background-color: navy;
 }
