--- a/resources/public/css/site.css
+++ b/resources/public/css/site.css
@@ -1,3 +1,16 @@
 body {
   margin: 2em;
+  color: #000000;
+  background-color: #EEEEEE;
+}
+.resource-row {
+  border-bottom: dashed #707578 0.5px;
+}
+.resource-row:hover {
+  background-color: #f6fffe;
+  color: #d5008f;
+  transition: background-color 0.15s ease-in;
+}
+.b-navy {
+  background-color: navy;
 }
