--- a/less/pikaday.less
+++ b/less/pikaday.less
@@ -1,8 +1,10 @@
 @charset "UTF-8";
+
 /*!
  * Pikaday
  * Copyright © 2014 David Bushell | BSD & MIT license | http://dbushell.com/
  */
+
 .pika-single {
   z-index: 9999;
   display: block;
@@ -13,6 +15,7 @@
   border-bottom-color: #bbb;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+
 /*
 clear child float (pika-lendar), using the famous micro clearfix hack
 http://nicolasgallagher.com/micro-clearfix-hack/
@@ -22,28 +25,29 @@ http://nicolasgallagher.com/micro-clearfix-hack/
   content: " ";
   display: table;
 }
-.pika-single:after {
-  clear: both;
-}
-.pika-single {
-  *zoom: 1;
-}
+.pika-single:after { clear: both }
+.pika-single { *zoom: 1 }
+
 .pika-single.is-hidden {
   display: none;
 }
+
 .pika-single.is-bound {
   position: absolute;
-  box-shadow: 0 5px 15px -5px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 5px 15px -5px rgba(0,0,0,.5);
 }
+
 .pika-lendar {
   float: left;
   width: 240px;
   margin: 8px;
 }
+
 .pika-title {
   position: relative;
   text-align: center;
 }
+
 .pika-label {
   display: inline-block;
   *display: inline;
@@ -67,6 +71,7 @@ http://nicolasgallagher.com/micro-clearfix-hack/
   filter: alpha(opacity=0);
   opacity: 0;
 }
+
 .pika-prev,
 .pika-next {
   display: block;
@@ -89,42 +94,50 @@ http://nicolasgallagher.com/micro-clearfix-hack/
   *position: absolute;
   *top: 0;
 }
+
 .pika-prev:hover,
 .pika-next:hover {
   opacity: 1;
 }
+
 .pika-prev,
 .is-rtl .pika-next {
   float: left;
   background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAeCAYAAAAsEj5rAAAAUklEQVR42u3VMQoAIBADQf8Pgj+OD9hG2CtONJB2ymQkKe0HbwAP0xucDiQWARITIDEBEnMgMQ8S8+AqBIl6kKgHiXqQqAeJepBo/z38J/U0uAHlaBkBl9I4GwAAAABJRU5ErkJggg==');
   *left: 0;
 }
+
 .pika-next,
 .is-rtl .pika-prev {
   float: right;
   background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAeCAYAAAAsEj5rAAAAU0lEQVR42u3VOwoAMAgE0dwfAnNjU26bYkBCFGwfiL9VVWoO+BJ4Gf3gtsEKKoFBNTCoCAYVwaAiGNQGMUHMkjGbgjk2mIONuXo0nC8XnCf1JXgArVIZAQh5TKYAAAAASUVORK5CYII=');
   *right: 0;
 }
+
 .pika-prev.is-disabled,
 .pika-next.is-disabled {
   cursor: default;
   opacity: .2;
 }
+
 .pika-select {
   display: inline-block;
   *display: inline;
 }
+
 .pika-table {
   width: 100%;
   border-collapse: collapse;
   border-spacing: 0;
   border: 0;
 }
+
 .pika-table th,
 .pika-table td {
   width: 14.285714285714286%;
   padding: 0;
 }
+
 .pika-table th {
   color: #999;
   font-size: 12px;
@@ -132,6 +145,7 @@ http://nicolasgallagher.com/micro-clearfix-hack/
   font-weight: bold;
   text-align: center;
 }
+
 .pika-button {
   cursor: pointer;
   display: block;
@@ -148,14 +162,17 @@ http://nicolasgallagher.com/micro-clearfix-hack/
   text-align: right;
   background: #f5f5f5;
 }
+
 .pika-week {
   font-size: 11px;
   color: #999;
 }
+
 .is-today .pika-button {
   color: #33aaff;
   font-weight: bold;
 }
+
 .is-selected .pika-button,
 .has-event .pika-button {
   color: #fff;
@@ -164,26 +181,31 @@ http://nicolasgallagher.com/micro-clearfix-hack/
   box-shadow: inset 0 1px 3px #178fe5;
   border-radius: 3px;
 }
+
 .has-event .pika-button {
   background: #005da9;
   box-shadow: inset 0 1px 3px #0076c9;
 }
+
 .is-disabled .pika-button,
 .is-inrange .pika-button {
   background: #D5E9F7;
 }
+
 .is-startrange .pika-button {
   color: #fff;
   background: #6CB31D;
   box-shadow: none;
   border-radius: 3px;
 }
+
 .is-endrange .pika-button {
   color: #fff;
   background: #33aaff;
   box-shadow: none;
   border-radius: 3px;
 }
+
 .is-disabled .pika-button,
 .is-outside-current-month .pika-button {
   pointer-events: none;
@@ -191,6 +213,7 @@ http://nicolasgallagher.com/micro-clearfix-hack/
   color: #999;
   opacity: .3;
 }
+
 .pika-button:hover,
 .pika-row.pick-whole-week:hover .pika-button {
   color: #fff;
@@ -198,27 +221,9 @@ http://nicolasgallagher.com/micro-clearfix-hack/
   box-shadow: none;
   border-radius: 3px;
 }
+
 /* styling for abbr */
 .pika-table abbr {
   border-bottom: none;
   cursor: help;
-}
-body {
-  margin: 2em;
-  color: #000000;
-  background-color: #EEEEEE;
-}
-.resource-row {
-  border-bottom: dashed #707578 0.5px;
-}
-.resource-row:hover {
-  background-color: #f6fffe;
-  color: #d5008f;
-  transition: background-color 0.15s ease-in;
-}
-.b-navy {
-  background-color: navy;
-}
-.actions-cell a {
-  margin: auto 0.5em;
 }
