feat: adds jenkins status dot

--- a/less/site.less
+++ b/less/site.less
@@ -24,3 +24,21 @@ body {
     margin: auto 0.5em;
   }
 }
+
+.status-dot {
+  text-align: center;
+  width: 100%;
+}
+
+.blue {
+  color: blue;
+}
+
+.red {
+  color: red;
+}
+
+// TODO: animate
+.blue_anime {
+  color: blue;
+}
